# pdw_sim

./: CMakeLists.txt  README.md  package.xml
include/pdw_sim/: biped_robot.h
launch/: walking.launch
param/: biped.yaml
rviz/: biped.rviz
src/: biped_robot.cpp  plot_walking.cpp  walker.cpp
